ADD(admin + validation): withdrawal of users to the admin
feat:

1) Добавил вывод юзеров в админке
2) Валидация при бронировании помещения
